--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -1,12 +1,18 @@
-name: Run Unit Tests
+name: CI Pipeline
 
 on:
   push:
     branches:
+      - main
+      - develop
+  pull_request:
+    branches:
+      - main
       - develop
 
 jobs:
-  unit-tests:
+  ci:
+    name: Run CI Pipeline
     runs-on: ubuntu-latest
 
     steps:
@@ -24,6 +30,14 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      # Run Jest tests
-      - name: Run Unit Tests
+      # Lint the code
+      - name: Lint code
+        run: npm run lint
+
+      # Run unit tests
+      - name: Run unit tests
         run: npm run test
+
+      # Build the application
+      - name: Build application
+        run: npm run build
